# vehicle-can-cybersecurity-testbed-Project

./: PRIVATE_UPLOAD_CHECKLIST.md  README.md  requirements.txt
dashboard/: README.md
docs/: Project Report.docx  Project research.docx  architecture.md  attack-scenarios.md  setup-guide.md  troubleshooting.md
images/: README.md
launch/: README.md  full_system.launch
ros_nodes/: Attack_node.py  CMakeLists.txt  README.md  brake_system_node.py  can_bridge.py  can_engine_node.py  can_ids.py  car_monitor_node.py  complete_car_simulation.launch  event_logger.py  package.xml  setup.py  steering_system_node.py  transmission_control_node.py  vehicle_speed_node.py
videos/: demo-link.md
windows/: automatic_control.py  dashboard.py  generate_traffic.py  sensors.py
