<?xml version="1.0"?>
<package format="2">
  <name>car_nodes</name>
  <version>1.0.0</version>
  <description>Car simulation nodes for CAN cybersecurity testing</description>
  <maintainer email="marko@example.com">marko</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>socketcan_bridge</exec_depend>
</package>
